# universal-a2a-agent

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  Makefile  Makefile copy  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-dockerhub.yml  publish-ghcr.yml  publish-pypi.yml
examples/: autogen_example.py  bee_example.py  beeai_framework_agent.py  call_direct.py  call_server.py  crewai_deep_example.py  crewai_example.py  crewai_watsonx_duo.py  langchain_example.py  langgraph_agent_example.py  langgraph_example.py  quickstart_crewai_watsonx.py  quickstart_langchain_openai.py  quickstart_langchain_watsonx.py  quickstart_langgraph_watsonx.py  quickstart_langraph_watsonx_tool.py  quickstart_watsonx.md  watsonx_direct.py
scripts/: build-containers.sh  check_integrations.py  containers.md  dev-down.sh  dev-logs.sh  dev-up.sh  load-dotenv.sh  setup_wizard.py
src/a2a_universal/: __init__.py  card.py  cli.py  client.py  config.py  frameworks.py  logging_config.py  models.py  provider_api.py  providers.py  py.typed  server.py
src/a2a_universal/adapters/: autogen_tool.py  bee_tool.py  beeai_agent.py  crewai_base_tool.py  crewai_tool.py  langchain_tool.py  langgraph_agent.py  langgraph_node.py  private_adapter.py
src/a2a_universal/framework_plugins/: __init__.py  beeai.py  crewai.py  langgraph.py  native.py
src/a2a_universal/provider_plugins/: __init__.py  anthropic.py  azure_openai.py  bedrock.py  echo.py  gemini.py  ollama.py  openai.py  watsonx.py
tests/: test_langgraph_agent.py  test_server.py
